--- a/todo-list.css
+++ b/todo-list.css
@@ -107,7 +107,9 @@ a:hover, a:visited, a:link, a:active {
     background-size: 100% 100%;
     background-position: 0 0;
     position: absolute;
+    top: 50%;
     left: 8px;
+    transform: translateY(-50%);
 }
 
 .check-box-checked {
@@ -122,9 +124,10 @@ a:hover, a:visited, a:link, a:active {
     display: none;
     width: 30px;
     height: 30px;
-    transform: rotateZ(45deg);
     position: absolute;
+    top: 50%;
     right: 15px;
+    transform: translateY(-50%) rotateZ(45deg);
 }
 
 .todo-delete-btn::before, .todo-delete-btn::after {
@@ -143,10 +146,21 @@ a:hover, a:visited, a:link, a:active {
 }
 
 .footer {
+    
     padding: 4px 60px 6px;
     text-align: center;
     box-shadow: 0 -2px 1px rgba(0, 0, 0, 0.03), 0 1px 1px rgba(0, 0, 0, 0.2), 0 8px 0 -3px #f6f6f6, 0 9px 1px -3px rgba(0, 0, 0, 0.2), 0 16px 0 -6px #f6f6f6, 0 17px 1px -6px rgba(0, 0, 0, 0.2);
     position: relative;
+}
+
+.item-tips{
+    color: ccc;
+    font-size: 16px;
+
+    position: absolute;
+    left: 20px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .filter-btn {
@@ -154,8 +168,31 @@ a:hover, a:visited, a:link, a:active {
     font-size: 12px;
     display: inline-block;
     margin: 0 4px;
-    border: 1px solid #ccc;
+    border: 1px solid #fff;
     vertical-align: middle;
     padding: 3px 8px;
     border-radius: 8px;
+}
+
+.filter-btn:hover{
+    border-color: #eee;
+}
+
+.filter-btn-active {
+    border-color: #ccc !important;
+}
+
+.item-clear-btn {
+    color: #ddd;
+    font-size: 16px;
+
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.item-clear-btn:hover{
+    color: #bbb;
+    cursor: pointer;
+    text-decoration: underline;
 }
