添加存储到localstorage逻辑

--- a/todo-list.css
+++ b/todo-list.css
@@ -43,6 +43,9 @@ a:hover, a:visited, a:link, a:active {
 }
 
 /* e 统一样式修改 */
+[v-cloak]{
+    display: none;
+}
 
 .todo-list {
     min-width: 230px;
